--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.port=9020
+server.port=8324
 
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=db_service_habilitados
-spring.datasource.username=sa
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=db_service_habilitados_campanas
+spring.datasource.username=demo
 spring.datasource.password=123456
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
